# python-project-template

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: main.yaml
src/project/: example.py
tests/: test_example.py
