[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip_glob = ".venv"
known_first_party = ["project", "tests"]

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Gary Prescott <gary@madplum.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4"
pytest-cov = "^4.1.0"
flake8-isort = "^6.0.0"
isort = "^5.12.0"
jedi = "^0.19.0"
autopep8 = "^2.0.2"
yapf = "^0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
