[tool.ruff]
preview = true
line-length = 88
exclude = [
    ".git",
    ".venv"
]
target-version = "py312"

[tool.ruff.lint]
select = [
    "I",
    "F",
    "E",
    "W",
    "Q",
    "UP",
    "FAST",
    "LOG",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = [
    "project",
    "tests",
]

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Gary Prescott <gary@madplum.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "project", from = "./src" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15"
pytest-cov = "^6.0.0"
yapf = "^0.43.0"
packaging = "^24.1"
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
