[tool.ruff]
preview = true
line-length = 88
exclude = [
    ".git",
    ".venv"
]
target-version = "py313"

[tool.ruff.lint]
select = [
    "I",
    "F",
    "E",
    "W",
    "Q",
    "UP",
    "FAST",
    "LOG",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = [
    "project",
    "tests",
]

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

[tool.coverage.report]
show_missing = true

[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Gary Prescott", email = "gary@madplum.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "mypy>=1.17",
    "pytest-cov>=6.2.1",
    "yapf>=0.43.0",
    "packaging>=25.0",
    "ruff>=0.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project"]
